[package]
name = "adventofcode2018"
version = "0.1.0"
authors = ["Wendell Smith <wackywendell@gmail.com>"]
edition = "2018"

[[bin]]
name = "day1"
path = "src/day1/main.rs"

[[bin]]
name = "day2"
path = "src/day2/main.rs"

[[bin]]
name = "day3"
path = "src/day3/main.rs"

[dependencies]
clap = "2.32"
lazy_static = "1.2"
regex = "1"
