[package]
name = "aoc"
version = "0.1.0"
authors = ["Wendell Smith <wackywendell@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.6"
clap = "2.32"
failure = "0.1"
itertools = "0.8.0"
lazy_static = "1.2"
regex = "1"
nom = "4.1"
combine = "3.6.3"
text_io = "0.1.7"

[[bin]]
name = "day1"
path = "src/day1/main.rs"

[[bin]]
name = "day2"
path = "src/day2/main.rs"

[[bin]]
name = "day3"
path = "src/day3/main.rs"

[[bin]]
name = "day4"
path = "src/day4/main.rs"

[[bin]]
name = "day5"
path = "src/day5/main.rs"

[[bin]]
name = "day6"
path = "src/day6/main.rs"

[[bin]]
name = "day7"
path = "src/day7/main.rs"

[[bin]]
name = "day8"
path = "src/day8/main.rs"

[[bin]]
name = "day9"
path = "src/day9/main.rs"

[[bin]]
name = "day10"
path = "src/day10/main.rs"

[[bin]]
name = "day11"
path = "src/day11/main.rs"

[[bin]]
name = "day12"
path = "src/day12/main.rs"

[[bin]]
name = "day13"
path = "src/day13/main.rs"

[[bin]]
name = "day14"
path = "src/day14/main.rs"

[[bin]]
name = "day15"
path = "src/day15/main.rs"

[[bin]]
name = "day16"
path = "src/day16/main.rs"
